# easy_lightning

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  requirements.txt  setup.py
cfg/: config.yaml  config2.yaml  local_config.yaml  torchvision_config.yaml
cfg/app1_2/: app1_2_file.yaml
cfg/easy_exp cfg/: config.yaml
cfg/easy_exp cfg/app1_2/: app1_2_file.yaml
cfg/easy_exp cfg/app2/: app2_file.yaml
cfg/easy_rec cfg/data_params/: data_cfg.yaml
cfg/easy_rec cfg/model/: model.yaml
data_utils/: __init__.py  data.py  file.py  stat.py  stats.py  torch.py  transform.py  uci.py  utils.py
docs/source/: conf 2.py  conf.py  config.rst  easy_rec_config.rst  easy_torch_config.rst  index.rst  modules.rst  sequential.rst
easy_lightning/: __init__.py
easy_lightning/easy_rec/: download_data.bash
exp_utils/: __init__.py  cfg.py  exp.py  var.py
ntb/: information_ntb.ipynb  overparametrization_notebook_resnet18+mnist.ipynb  plots.ipynb  try_data 3.ipynb  try_data.ipynb  try_data2 3.ipynb  try_exp.ipynb  try_rec.ipynb  try_torch2 2.ipynb
ntb/easy_rec ntb/: OLDmain 2.ipynb  get_dataset_stats 2.ipynb  main.ipynb  main_hyperparam 2.ipynb  try_dataloader 2.ipynb
src/: change_hash.ipynb  check_hash.py  check_hash2.py  pyproject.toml
torch_utils/: losses.py  metrics.py  model.py  preparation.py  process.py  torchvision_utils.py
